# BlockyBuild

./: CMakeLists.txt  README.md
src/: assets.c  assets.h  blocks.c  blocks.h  cameras.c  cameras.h  game.c  game.h  gameCommon.h  implementations.c  main.c  player.c  player.h  screensInclude.h  world.c  world.h
src/screens/: gameScreen.c  gameScreen.h  mainMain.c  mainMenu.h
